Revamp gallery, program, and visit pages

--- a/shop.html
+++ b/shop.html
@@ -25,6 +25,7 @@
     
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
     <main class="shop-main" aria-labelledby="shop-heading">
       <section class="shop-overview">
         <div class="shop-overview__inner">
