--- a/소개.html
+++ b/소개.html
@@ -37,37 +37,173 @@
 
       <!-- 공간소개 -->
       <section id="공간소개" class="tab-panel" role="tabpanel" tabindex="0">
-        <!-- Toggle Button -->
-        <div class="space-tabs reveal parallax from-up" data-tabs role="tablist" aria-label="공간소개 분류">
-          <button class="tab-button active" role="tab" id="tab-facility" aria-controls="panel-facility-detail" aria-selected="true">시설</button>
-          <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
+        <div class="space-filters shop-filters" role="group" aria-label="공간 소개 분류">
+          <button type="button" class="shop-filter is-active" data-space-filter="all">All</button>
+          <button type="button" class="shop-filter" data-space-filter="facility">시설</button>
+          <button type="button" class="shop-filter" data-space-filter="garden">정원</button>
         </div>
-        <!-- 시설 공간 소개 -->
-        <section id="panel-facility-detail" class="tab-panel" role="tabpanel" tabindex="0">
-          <div class="cards reveal parallax from-up" height="409px">
-            <article class="space-card" data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg" data-title="유리온실" data-desc="유리온실에 관한 설명입니다.">
-              <img src="assets/img/유리온실.jpg" alt="유리온실 이미지" class="space-card-img"/>
-              <h3 class="space-card-title">유리온실</h3>
-            </article>
-            <article class="space-card" data-images="assets/img/카페.jpg,assets/img/가든센터.jpg" data-title="카페" data-desc="카페에 관한 설명입니다.">
-              <img src="assets/img/카페.jpg" alt="카페 이미지" class="space-card-img"/>
-              <h3 class="space-card-title">카페</h3>
-            </article>
-          </div>
-        </section>
-        <!-- 정원 공간 소개 -->
-        <section id="panel-garden-detail" class="tab-panel" role="tabpanel" tabindex="0" hidden>
-          <div class="cards reveal parallax from-up" height="409px">
-            <article class="space-card" data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg" data-title="가든센터" data-desc="가든센터에 관한 설명입니다.">
-              <img src="assets/img/가든센터.jpg" alt="가든센터 이미지" class="space-card-img"/>
-              <h3 class="space-card-title">가든센터</h3>
-            </article>
-            <article class="space-card" data-images="assets/img/main.jpg,assets/img/유리온실2.jpg" data-title="정원" data-desc="정원 카드에 관한 설명입니다.">
-              <img src="assets/img/main.jpg" alt="정원 이미지" class="space-card-img"/>
-              <h3 class="space-card-title">정원</h3>
-            </article>
-          </div>
-        </section>
+
+        <div class="space-gallery" data-space-gallery>
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg" data-title="유리 온실" data-desc="사계절 식물이 숨 쉬는 가시림의 중심 온실입니다. 계절별 테마 전시와 명상 클래스가 열립니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실.jpg" alt="가시림 유리 온실 내부" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">유리 온실</h3>
+              <p class="space-card__summary">사계절 꽃과 열대 식물을 감상하며 휴식을 취할 수 있는 메인 온실.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" data-title="가든센터" data-desc="정원 관리 노하우와 계절 식물을 만날 수 있는 가시림의 안내 센터입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/가든센터.jpg" alt="가시림 가든센터 외관" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">가든센터</h3>
+              <p class="space-card__summary">입장 안내와 가드닝 클래스를 진행하는 허브 공간.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg" data-title="마음 온실 스튜디오" data-desc="온실 안쪽에 마련된 조용한 스튜디오로, 명상과 요가 프로그램이 운영됩니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실2.jpg" alt="마음 온실 스튜디오 전경" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">마음 온실 스튜디오</h3>
+              <p class="space-card__summary">온실 속 깊은 휴식을 위한 전용 명상 스튜디오.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" data-title="플랜트 카페" data-desc="제철 허브와 티를 즐길 수 있는 카페와 숍으로, 가시림의 시그니처 음료를 제공합니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/카페.jpg" alt="가시림 플랜트 카페" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">플랜트 카페</h3>
+              <p class="space-card__summary">허브 티와 가드닝 굿즈를 만나는 라이프스타일 카페.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/main.jpg,assets/img/유리온실.jpg,assets/img/카페.jpg" data-title="메타세쿼이아 숲길" data-desc="하늘을 가득 메우는 메타세쿼이아가 조성하는 산책길로, 새벽 명상 프로그램이 진행됩니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/main.jpg" alt="메타세쿼이아 숲길" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">메타세쿼이아 숲길</h3>
+              <p class="space-card__summary">사계절 내내 깊은 숲 향을 느낄 수 있는 대표 산책 코스.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/가든센터.jpg,assets/img/유리온실2.jpg,assets/img/main.jpg" data-title="오름 정원" data-desc="제주의 오름을 모티프로 설계한 입체 정원으로, 화산석과 토종 식물을 감상할 수 있습니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/가든센터.jpg" alt="오름 정원" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">오름 정원</h3>
+              <p class="space-card__summary">제주 오름 지형을 재현한 테라스형 정원.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/main.jpg,assets/img/카페.jpg,assets/img/유리온실.jpg" data-title="수국 정원" data-desc="초여름이 되면 색색의 수국이 만개해 가장 화려한 풍경을 선사하는 인기 포토 스팟입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/main.jpg" alt="수국 정원" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">수국 정원</h3>
+              <p class="space-card__summary">초여름을 수놓는 화려한 컬러의 수국 군락.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/유리온실2.jpg,assets/img/가든센터.jpg,assets/img/main.jpg" data-title="팜파스 그라스 필드" data-desc="바람에 따라 부드럽게 물결치는 팜파스 그라스로 가을 감성을 담은 산책이 가능합니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실2.jpg" alt="팜파스 그라스 필드" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">팜파스 그라스 필드</h3>
+              <p class="space-card__summary">황금빛 억새가 드넓게 펼쳐지는 가을 정원.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/main.jpg,assets/img/유리온실.jpg,assets/img/카페.jpg" data-title="곶자왈 생태숲" data-desc="제주의 곶자왈 생태계를 그대로 옮겨온 구역으로, 희귀 이끼와 야생화가 어우러져 있습니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/main.jpg" alt="곶자왈 생태숲" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">곶자왈 생태숲</h3>
+              <p class="space-card__summary">토종 생물을 보호하는 프라이빗 숲 구역.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/유리온실2.jpg" data-title="햇살 마당" data-desc="탁 트인 잔디 광장으로, 가족 피크닉과 야외 클래스가 열리는 열린 공간입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/카페.jpg" alt="햇살 마당" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">햇살 마당</h3>
+              <p class="space-card__summary">주말 피크닉과 야외 클래스가 열리는 잔디 마당.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/유리온실.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" data-title="치유 산책로" data-desc="편안한 동선과 다양한 향기 식물이 배치된 테라피 산책로입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실.jpg" alt="치유 산책로" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">치유 산책로</h3>
+              <p class="space-card__summary">향기 식물과 함께 걷는 테라피 코스.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/가든센터.jpg,assets/img/카페.jpg,assets/img/유리온실2.jpg" data-title="명상 화원" data-desc="명상 클래스 전에 호흡을 정돈하는 화단으로, 계절 꽃과 허브가 어우러져 있습니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/가든센터.jpg" alt="명상 화원" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">명상 화원</h3>
+              <p class="space-card__summary">차분한 호흡을 돕는 명상 전용 플랜팅 존.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/유리온실2.jpg,assets/img/유리온실.jpg,assets/img/main.jpg" data-title="원예 실험포" data-desc="원예 프로그램을 체험할 수 있는 실습 구역으로, 다양한 감각원예 수업이 열립니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실2.jpg" alt="원예 실험포" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">원예 실험포</h3>
+              <p class="space-card__summary">감각원예 수업과 체험이 이루어지는 실습 정원.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/main.jpg,assets/img/가든센터.jpg,assets/img/유리온실.jpg" data-title="별빛 정원" data-desc="밤이 되면 은은한 조명이 켜져 야간 산책에 어울리는 로맨틱한 정원입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/main.jpg" alt="별빛 정원" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">별빛 정원</h3>
+              <p class="space-card__summary">밤의 조명과 어우러진 로맨틱 산책 정원.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/카페.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" data-title="향기 허브 테라스" data-desc="온실과 연결된 허브 테라스로, 직접 수확한 허브를 활용한 티 클래스가 운영됩니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/카페.jpg" alt="향기 허브 테라스" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">향기 허브 테라스</h3>
+              <p class="space-card__summary">허브 향으로 가득한 온실 옆 테라스.</p>
+            </div>
+          </article>
+
+          <article class="space-card" role="button" tabindex="0" data-space-type="garden" data-images="assets/img/유리온실.jpg,assets/img/main.jpg,assets/img/카페.jpg" data-title="수생 식물 연못" data-desc="연과 수생 식물을 감상하며 휴식할 수 있는 수변 공간입니다.">
+            <figure class="space-card__media">
+              <img src="assets/img/유리온실.jpg" alt="수생 식물 연못" loading="lazy"/>
+            </figure>
+            <div class="space-card__body">
+              <h3 class="space-card__title">수생 식물 연못</h3>
+              <p class="space-card__summary">물소리와 함께 머무는 힐링 수변 정원.</p>
+            </div>
+          </article>
+        </div>
       </section>
 
       <!-- 수목원 지도 -->
