--- a/프로그램.html
+++ b/프로그램.html
@@ -24,6 +24,7 @@
   <div class="page">
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="program-main" aria-labelledby="program-heading">
       <section class="program-hero">
@@ -37,6 +38,33 @@
           <figure class="program-hero__media">
             <img src="assets/img/main.jpg" alt="나무 사이로 들어오는 햇살이 비추는 숲길" loading="lazy">
           </figure>
+        </div>
+      </section>
+
+      <section class="program-summary" aria-labelledby="program-summary-heading">
+        <div class="program-summary__header">
+          <h2 id="program-summary-heading">세 가지 시그니처 프로그램</h2>
+          <p class="program-summary__intro">명상과 원예, 산책 명상을 대표하는 핵심 프로그램을 먼저 만나보세요. 각 카드를 클릭하면 세부 안내와 일정, 신청 안내 페이지로 이동합니다.</p>
+        </div>
+        <div class="program-summary__grid">
+          <a class="program-summary__card" href="산책명상.html">
+            <span class="program-summary__badge">WALK</span>
+            <h3>산책 명상</h3>
+            <p class="program-summary__excerpt">새벽 숲을 함께 걸으며 호흡을 여는 가시림 대표 프로그램. 계절마다 달라지는 산책길에서 감각을 깨웁니다.</p>
+            <span class="program-summary__cta">자세히 보기</span>
+          </a>
+          <a class="program-summary__card" href="명상.html">
+            <span class="program-summary__badge">MEDITATION</span>
+            <h3>온실 명상</h3>
+            <p class="program-summary__excerpt">온실 속에서 진행되는 심화 명상 세션으로, 사운드 배스와 촛불 명상 등 다양한 이완 커리큘럼을 제공합니다.</p>
+            <span class="program-summary__cta">자세히 보기</span>
+          </a>
+          <a class="program-summary__card" href="원예.html">
+            <span class="program-summary__badge">GARDENING</span>
+            <h3>감각 원예</h3>
+            <p class="program-summary__excerpt">식물을 직접 돌보고 디자인하며 치유를 경험하는 원예 클래스. 계절 소재를 활용한 실습으로 구성되어 있습니다.</p>
+            <span class="program-summary__cta">자세히 보기</span>
+          </a>
         </div>
       </section>
 
